add video, user model and learn jwttoken, bcrypt, pre and methods

--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,5 @@
 PORT = 8000
 MONGODB_URI = "mongodb+srv://jatinbansal:jatinbansal1234@cluster0.xp1vxui.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+
+//ACCESS_TOKEN  database ch store hi nhi hunda
+//REFRESH_TOKEN  hunda
