--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "prettier": "^3.3.2"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "fs": "^0.0.1-security",
     "json-server": "^0.17.4",
-    "mongoose": "^8.4.4"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.4.4",
+    "mongoose-aggregate-paginate-v2": "^1.1.0"
   }
 }
